--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,19 +80,7 @@
                 </ul>
                 <p class="copyright text-muted">
                     Copyright {{ site.time | date: '%Y' }} <i class="fa fa-heart" aria-hidden="true" style="color: #0085A1"></i>  LiangChengDeYe. Powered by Jekyll & GitHub.</span>
-您是本站第<span id="busuanzi_value_site_uv">
-                    <script>
-                        var _hmt = _hmt || [];
-                        (function() {
-                          var hm = document.createElement("script");
-                          hm.src = "https://hm.baidu.com/hm.js?00f396a2922bd4d7660cb3f9208c96d9";
-                          var s = document.getElementsByTagName("script")[0];
-                          s.parentNode.insertBefore(hm, s);
-                          $('#busuanzi_value_site_uv').html(s);
-                          document.getElementById('busuanzi_value_site_uv').innerHTML=s;
-                        })();
-                        </script>
-                </span>位小伙伴</p>
+您是本站第<span id="busuanzi_value_site_uv"></span>位小伙伴</p>
                     <p class="copyright text-muted" id="count">
 
 
@@ -116,7 +104,7 @@
   window.setInterval('counter()',1000);
   function counter(){
     var date=new Date();
-    var startDate=new Date(2018,12,07,0,0,0);
+    var startDate=new Date(2018,12,06,0,0,0);
     var time=(date-startDate)/1000;
     var day=Math.floor(time/(24*60*60));
     var hour=Math.floor(time%(24*60*60)/(60*60));
