--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,11 +22,12 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ site.baseurl }}/">首页(HOME)</a>
+                        <!--(HOME)-->
+                        <a href="{{ site.baseurl }}/">首页</a>
                     </li>
                     {% for page in site.pages %}{% if page.title %}
                     <li>
-                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title_ch }}</a>
                     </li>
                     {% endif %}{% endfor %}
                 </ul>
