--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,15 @@
     animation: fade 600ms infinite;
 }
 </style>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?00f396a2922bd4d7660cb3f9208c96d9";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <footer>
     <div class="container">
         <div class="row">
