--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,7 @@
     color: #0085A1;
     border-radius: 50%;
     animation: fade 600ms infinite;
+    -webkit-animation: fade 600ms infinite;
 }
 </style>
 <script>
