--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -194,7 +194,7 @@ layout: default
                             <!--简书-->
                             {% if site.jianshu_link %}
                             <li>
-                                <a target="_blank" href="{{ site.csdn_link }}">
+                                <a target="_blank" href="{{ site.jianshu_link }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-stack-1x fa-inverse" style="background-color: #E45E45;border-radius: 50%;">简</i>
